test_scores/negative_dimers/features/Q7L591.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q7L591.pkl.xz